# Company-management-system

./: pyproject.toml
src/company_project/: database.py  main.py  model.py
