[project]
name = "company-project"
version = "0.1.0"
description = ""
authors = [
    {name = "tyagiayush990",email = "tyagiayush990@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "company_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
